# Crypto-arb-bot

./: .gitignore  Cargo.toml  Log.md  Log2.md  README.md  address.txt  output.json
abis/: Flashloan.json  FlashloanV2.json  FlashloanV3.json  Liquidations.json
abis/uniswap/v2/: IUniswapV2Factory.json  IUniswapV2Pair.json
contracts/: Flashloan.sol  Liquidations.sol
contracts/interfaces/: IDodo.sol  IFlashloan.sol  IPool.sol  IUniswapV2Router.sol
contracts/interfaces/balancer/: IBalancerVault.sol  IFlashLoanRecipient.sol
contracts/interfaces/uniswap/: IUniswapV2Router.sol
contracts/libraries/: RouteUtils.sol
data/: polygon_tokens.json
src/: aave.rs  balancer.rs  consts.rs  event_monitor.rs  lib.rs  main.rs  price.rs  tx_pool.rs  uniswapV2.rs  uniswapV3.rs  utils.rs  world.rs
src/algos/: balancer_flashloan_arb.rs  mod.rs  routes.rs
src/constants/: mod.rs  protocol.rs  token.rs
src/consts/: mod.rs  protocols.rs  routes.rs  tokens.rs
src/utils/: block.rs  block_oracle.rs  junk.rs  matrix.rs  mod.rs  multicall.rs  price_conversion.rs  price_utils.rs  serialize_structs.rs  trie.rs  txstructs.rs
src/utils/batch/: common.rs  custom_ipc.rs  mod.rs
src/utils/transaction/: ethers_compat.rs  mod.rs
