[package]
name = "cryptorocket"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
enum-map = "2.4.1"
lazy_static = "1.4.0"
serde_json = "1.0.86"
futures-util = "0.3.24"
serde = { version = "1.0.124", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
tokio = { version = "1.21.1", features = ["full"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["ws"] }