[package]
name = "tsuki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.8.1"
log = "0.4.17"
dotenv = "0.15.0"
enum-map = "2.4.1"
env_logger = "0.9.3"
lazy_static = "1.4.0"
serde_json = "1.0.86"
futures-util = "0.3.24"
clap = { version = "4.0.23", features=["derive"] } # command line parsing
serde = { version = "1.0.124", features = ["derive"] } # serialization library
reqwest = { version = "0.11.12", features = ["json"] } # TODO removeable?
tokio = { version = "1.21.1", features = ["full"] } # async-await library
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
ethers = { version = "1.0.0", features = ["ws", "ipc"] } # eth json-rpc library